testing/RESTFullApiSample/Product API/api/errors/unauthorized/Demonstrates a 401 Unauthorized error.bru
meta {
  name: Demonstrates a 401 Unauthorized error
  type: http
  seq: 1
}

get {
  url: {{baseUrl}}/api/errors/unauthorized
  body: none
  auth: inherit
}
